fix incorrect link path and mapbox/mobile footer z-index

--- a/src/components/FooterNavPhone/FooterNavPhone.scss
+++ b/src/components/FooterNavPhone/FooterNavPhone.scss
@@ -6,7 +6,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   background-color: color.$primary;
   color: white;
   @include display.flexbox(row, center, center, wrap);
